# dementiaDB

./: .gitignore  CMakeLists.txt  README.md
bench/: hdf5_bench.cpp  hdf5_bench.py  requirements.txt
examples/: opening.cpp  saving.cpp
src/: dementiaDB.cpp  dementiaDB.h  index.cpp  index.h  indexFlat.cpp  indexFlat.h  indexHnsw.cpp  indexHnsw.h  metadata.cpp  metadata.h
utils/: mathutils.h  timer.h
